# wasm-component-rust-snippets

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
advent-of-spin2023-challenge01/: Cargo.toml
advent-of-spin2023-challenge01/src/: lib.rs
advent-of-spin2023-challenge01/tests/: test03.hurl
advent-of-spin2023-challenge02/src/: family.rs  lib.rs
advent-of-spin2023-challenge03/: Cargo.toml
calculation/add/: Cargo.toml
calculation/add/src/: lib.rs
calculation/cli/: Cargo.toml
calculation/cli/src/: main.rs
canonical-abi/: Cargo.toml  c.wat  defautl.wat
canonical-abi/src/: lib.rs
canonical-abi/wat/: repr_c.wat  repr_packed.wat  repr_rust.wat
cargo-component-updater/: Cargo.toml
cargo-component-updater/src/: cli.rs  context.rs  main.rs
cargo-component-updater/src/context/: error.rs  replace_dependencies.rs  update_code.rs
component-composition/add/: Cargo.toml
component-composition/add/src/: lib.rs
component-composition/add/wit/: world.wit
component-composition/cli/: Cargo.toml
component-composition/cli/src/: main.rs
component-composition/formatter/: Cargo.toml
component-composition/formatter/src/: lib.rs
component-composition/fraction-add/: Cargo.toml
component-composition/fraction-add/src/: lib.rs
component-composition/fraction-add/wit/: world.wit
component-composition/resource-handler/: Cargo.toml
component-composition/resource-handler/src/: lib.rs
component-composition/scripts/: build.sh  build.ts  run.sh
component-composition/wit/: calculation.wit  cli.wit  formatter.wit  fraction.wit  resource.wit  world.wit
fraction/fraction-with-wit/: Cargo.toml  package-lock.json  package.json
fraction/fraction-with-wit/js/: fraction_with_wit.d.ts  fraction_with_wit.js
fraction/fraction-with-wit/js/interfaces/: component-fraction-with-wit-fraction.d.ts
fraction/fraction-with-wit/scripts/: index.ts
fraction/fraction-with-wit/src/: lib.rs
fraction/fraction-with-wit/wit/: world.wit
fraction/fraction-without-wit/: Cargo.toml
fraction/fraction-without-wit/host/: index.ts
fraction/fraction-without-wit/src/: lib.rs
grep-wasm/filter-id/: Cargo.toml
grep-wasm/filter-id/src/: lib.rs
grep-wasm/grep-cli/: Cargo.toml
grep-wasm/grep-cli-dynamic-linking/: Cargo.toml
grep-wasm/grep-cli-dynamic-linking/src/: app_config.rs  app_error.rs  args.rs  main.rs  wasi_view_impl.rs
grep-wasm/grep-cli-dynamic-linking/src/wasm/: filter_id.wasm  grep-cli.wasm
grep-wasm/grep-cli/src/: args.rs  main.rs
grep-wasm/id-multiline/: Cargo.toml
grep-wasm/id-multiline/src/: lib.rs
grep-wasm/wit/: condition.wit  guest-multiline.wit  guest.wit  host.wit
hello-wasi-cli/: Cargo.toml
hello-wasi-component/: Cargo.toml  README.md
hello-wasi-component/src/: main.rs
hello-world/: Cargo.toml
hello-world-http/hello-world-http/: Cargo.toml
hello-world-spin/: Cargo.toml
hello-world-spin/src/: lib.rs
hello-world-spin/tests/: greet.hurl
hello-world/src/: lib.rs
hello-world/wit/: world.wit
host-code-generation/guest-ferris/: Cargo.toml
host-code-generation/guest-ferris/src/: lib.rs
host-code-generation/host-says/: Cargo.toml
host-code-generation/host-says/src/: main.rs
host-code-generation/host-says/wit/: implementation.wit  runner.wit  says.wit
http-hello-world/: Cargo.toml
http-hello-world/src/: lib.rs
png-glitch-with-media-device/: .gitignore  package.json  tsconfig.json
png-glitch-with-media-device/assets/: index.html
png-glitch-with-media-device/bitmap-png-bridge/: .gitignore  Cargo.toml
png-glitch-with-media-device/bitmap-png-bridge/src/: lib.rs
png-glitch-with-media-device/png-glitchable-impl/: Cargo.toml
png-glitch-with-media-device/png-glitchable-impl/src/: lib.rs
png-glitch-with-media-device/scripts/: build.ts  location.ts  serve.ts
png-glitch-with-media-device/ts/: index.ts
png-glitch-with-media-device/ts/png-glitchable/: png-glitch.d.ts  png-glitch.js
png-glitch-with-media-device/ts/png-glitchable/interfaces/: chikoski-glitch-art-bridge-to-png-glitchable.d.ts  chikoski-glitch-art-png-glitchable.d.ts
png-glitch-with-media-device/ts/ui/: composable.ts  media-screen.ts
png-glitch-with-media-device/ts/ui/composable/: box.ts  components.ts  navigation.ts  row.ts
png-glitch-with-media-device/wit/: .gitignore  world.wit
scripts/: compose.sh  grep-id.sh  host-code-generation.sh
spin/advent-of-spin2023-challenge01/: Cargo.toml  spin.toml
spin/advent-of-spin2023-challenge01/assets/: index.html
spin/advent-of-spin2023-challenge01/tests/: test01.hurl  test02.hurl
spin/advent-of-spin2023-challenge02/: Cargo.toml  spin.toml
spin/advent-of-spin2023-challenge02/src/: payload_optimizer.rs
spin/advent-of-spin2023-challenge03/: .gitignore  spin.toml
spin/advent-of-spin2023-challenge03/src/: lib.rs
spin/hello-world-spin/: Dockerfile  spin.toml
spin/hello-world-spin/tests/: get.hurl  health_check.hrul
threads/hello-threads/: Cargo.toml
threads/hello-threads/src/: main.rs
threads/wasi-threads-runtime/: Cargo.toml
threads/wasi-threads-runtime/src/: cli.rs  host.rs  main.rs  runtime.rs
threads/wasi-threads-runtime/src/runtime/: command_runtime.rs  module_runtime.rs  preview1_host.rs  preview2_host.rs
wasi-cli-filesystem/: Cargo.toml
wasi-cli-filesystem/src/: main.rs
wasi-cli/wasi-cli-filesystem/: Cargo.toml
wasi-http/hello-world-http/: Cargo.toml
wasi-http/hello-world-http-docker/: spin.toml
wasi-http/hello-world-http/hello-world-http-runner/: Dockerfile
wasi-http/hello-world-http/src/: lib.rs
wasmtime-examples/wasmtime-reactor-component/src/: main.rs
wasmtime-reactor-component/: Cargo.toml
wasmtime-reactor-component/src/: command_line_arguments.rs  grep_context.rs  main.rs
wasmtime-reactor-component/src/wasm/: filter_id.wasm
wasmtime-reactor-component/wit/: filter.wit  guest.wit
wasmtime-wasi-cli/: Cargo.toml
wasmtime-wasi-cli/src/: main.rs  wasi_view_impl.rs
wasmtime-wasi-cli/src/wasm/: hello-world.wasm
wit-resources/counter/counter/: Cargo.toml
wit-resources/counter/counter-user/: .gitignore  index.ts
wit-resources/counter/wit/: world.wit
(+4 files in other folders)
