[workspace]
members = [
    "canonical-abi",
    "wasi-cli-filesystem",
    "host-code-generation/host-says",
    "host-code-generation/guest-ferris",
    "grep-wasm/grep-cli",
    "grep-wasm/filter-id",
    "calculation/add",
    "calculation/cli",
    "cargo-component-updater",
]

exclude = [
    "spin/*",
    "grep-wasm/grep-cli-dynamic-linking",
    "wasmtime-reactor-component",
]

resolver = "2"
