[workspace]
members = [
    "canonical-abi",
    "wasi-cli-filesystem",
    "host-code-generation/host-says",
    "host-code-generation/guest-ferris",
    "grep-wasm/grep-cli",
    "grep-wasm/filter-id",
    "component-composition/*",
    "cargo-component-updater",
]

exclude = [
    "spin/*",
    "composed/",
    "grep-wasm/grep-cli-dynamic-linking",
    "wasmtime-reactor-component",
    "component-composition/scripts",
]

resolver = "2"
