[workspace]
members = [
    "canonical-abi",
    "wasi-cli-filesystem",
    "grep-wasm/grep-cli",
    "grep-wasm/filter-id",
    "component-composition/*",
    "cargo-component-updater",
]

exclude = [
    "spin/*",
    "composed/",
    "grep-wasm/grep-cli-dynamic-linking",
    "wasmtime-reactor-component",
    "component-composition/scripts",
    "component-composition/wit",
]

resolver = "2"
