[package]
name = "cargo-component-updater"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:cargo-component-updater"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
globmatch = "0.3.0"
log = "0.4.20"
rayon = "1.8.1"
regex = "1.10.3"
serde_json = "1.0.113"
thiserror = "1.0.56"
toml = "0.8.9"
