[package]
name = "hello-world-spin"
authors = ["N.Shimizu <chikoski@gmail.com>"]
description = "hello world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]
