[package]
name = "wasmtime-reactor-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.12", features = ["derive"] }
wasmtime = { version = "16.0.0", features = ["component-model", "async"] }
