[package]
name = "wasmtime-wasi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
async-std = { version = "1.12.0", features = ["attributes"] }
wasmtime = { version = "16.0.0", features = ["async", "component-model"] }
wasmtime-wasi = "16.0.0"
