[package]
name = "calculation-cli"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:calculation"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.component.target]
path = "../wit"
world = "cli"

[dependencies]
wit-bindgen = "0.16.0"
wit-bindgen-rt = "0.24.0"
