[package]
name = "fraction-add"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.17.0", default-features = false, features = [
    "realloc",
] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:fraction-add"

[package.metadata.component.target]
path = "../wit"
world = "fraction"

[package.metadata.component.dependencies]
