[package]
name = "fraction-add"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.23.0"


[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:fraction-add"

[package.metadata.component.target]
path = "../wit"
world = "fraction"

[package.metadata.component.dependencies]
