[package]
name = "resource-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.17.0", default-features = false, features = [
    "realloc",
] }
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:resource-handler"

[package.metadata.component.target]
path = "../wit"
world = "message-handler"

[package.metadata.component.dependencies]
