[package]
name = "filter-id"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.16.0"
wit-bindgen-rt = "0.24.0"

[package.metadata.component]
package = "component:filter-id"

[package.metadata.component.target]
path = "../wit"
world = "guest"

[package.metadata.component.dependencies]
