[package]
name = "grep-cli-dynamic-linking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.52"
wasmtime = { version = "16.0.0", features = ["component-model"] }
wasmtime-wasi = "16.0.0"
