[package]
name = "grep-cli"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:grep-cli"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.component.target]
path = "../wit"
world = "host"

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
wit-bindgen = "0.16.0"
