[package]
name = "id-multiline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.6.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:id-multiline"

[package.metadata.component.target]
path = "../wit"
world = "guest-multiline"

[package.metadata.component.dependencies]
