[package]
name = "guest-ferris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"
wit-bindgen = "0.16.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:format-ferris"

[package.metadata.component.target]
path = "../host-says/wit"
world = "says-implementation"

[package.metadata.component.dependencies]
