[package]
name = "host-says"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:says"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.6.0"

[package.metadata.component.target]
path = "./wit"
world = "says-runner"
