[package]
name = "png-glitchable-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
png-glitch = "0.3.1"
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "chikoski:png-glitcher-impl"
target = "chikoski:glitch-art/png-glitcher@0.3.4"

[package.metadata.component.dependencies]
