[package]
name = "advent-of-spin2023-challenge02"
authors = ["N.Shimizu <chikoski@gmail.com>"]
description = "Advent of Spin 2023 Challenge #2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]
