[package]
name = "wasi-threads-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "28.0.0"
wasmtime-wasi = "28.0.0"
wasmtime-wasi-threads = "28.0.0"
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["macros"] }
futures-util = "0.3.31"