[package]
name = "wasi-cli-filesystem"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:wasi-cli-filesystem"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
wit-bindgen = "0.16.0"
wit-bindgen-rt = "0.24.0"
